All RGA data is good

--- a/Sections/1_Introduction/AmmoniaOxidation.tex
+++ b/Sections/1_Introduction/AmmoniaOxidation.tex
@@ -6,7 +6,7 @@ Notable advancements in catalysis have led to the production of biodegradable pl
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/ammonia/ParisNO2English.png}
     \caption{
-        $NO_2$ levels in Paris near the main traffic roads are on average twice superior to the annual limit of \qty{40}{\ug \per \m^3} \parencite{AirParis} between 2012 and 2018.
+        $NO_2$ levels in Paris near the main traffic roads remained on average twice superior to the annual limit of \qty{40}{\ug \per \m^3} \parencite{AirParis} between 2012 and 2018 despite a global decrease of since 2012.
     }
     \label{fig:NO2Paris}
 \end{figure}
@@ -66,7 +66,7 @@ The oxidation of ammonia can be described by three equations that, depending on 
 
 The first equation (eq. \ref{eq:AmmoniaOxidationNitrogen}) yields nitrogen (\nitrogen), a naturally occurring gas that does not pollute the environment nor shows any toxic behaviour towards humans (tab. \ref{tab:NitrogenGases}).
 The second equation (eq. \ref{eq:AmmoniaOxidationNitrousOxide}) yields nitrous oxide (\nitrousoxide), a powerful greenhouse effect gas (tab. \ref{tab:NitrogenGases}).
-For an equal amount of \nitrousoxide and \carbondioxide, the amount of \nitrousoxide will trap 298 times more heat than the amount of \carbondioxide over the next 100 years \parencite{MITCLIMATE}, responsible for \qty{6.2}{\percent} of the total U.S.A. greenhouse gases emissions in 2021 (fig. \ref{fig:PieGreenhouseNO2}).
+For an equal amount of \ce{N_2O} and \ce{CO_2}, the amount of \ce{N_2O} will trap 298 times more heat than the amount of \carbondioxide over the next 100 years \parencite{MITCLIMATE}, responsible for \qty{6.2}{\percent} of the total U.S.A. greenhouse gases emissions in 2021 (fig. \ref{fig:PieGreenhouseNO2}).
 The third equation (eq. \ref{eq:AmmoniaOxidationNitricOxide}) yields nitric oxide, also called nitrogen monoxide (\nitricoxide), which is the main desired product for the subsequent production of nitrogen-based fertilisers (tab. \ref{tab:NitrogenGases}) \textit{via} the synthesis of nitric acid with the Ostwald process.
 
 Known side reactions to the oxidation of ammonia are first the recombination of nitric oxide with unreacted ammonia that leads to the production of water and nitrogen (eq. \ref{eq:SideReactions1}), and secondly the thermal decomposition of nitric oxide (eq. \ref{eq:SideReactions2}), that both lower the total yield of the reaction when aiming at the production of nitric oxide.
@@ -82,7 +82,7 @@ Reactions \ref{eq:AmmoniaOxidationNitrogen}, \ref{eq:AmmoniaOxidationNitrousOxid
 
 \subsection{The importance of heterogeneous catalysis}\label{sec:AmoOxiHC}
 
-The second (eq. \ref{eq:Stage2}) and third (eq. \ref{eq:Stage3}) stages of the Ostwald process stem from the production of \nitricoxide \textit{via} the first stage, \textit{i.e.} the oxidation of ammonia (eq. \ref{eq:AmmoniaOxidationNitricOxide}).
+The second (eq. \ref{eq:Stage2}) and third (eq. \ref{eq:Stage3}) stages of the Ostwald process stem from the production of \ce{NO} \textit{via} the first stage, \textit{i.e.} the oxidation of ammonia (eq. \ref{eq:AmmoniaOxidationNitricOxide}).
 
 \begin{align}
     \label{eq:Stage2}
@@ -91,23 +91,23 @@ The second (eq. \ref{eq:Stage2}) and third (eq. \ref{eq:Stage3}) stages of the O
     3 \nitrogendioxide (g) + \water (l) & \rightarrow 2\nitricacid (aq) + \nitricoxide (g)
 \end{align}
 
-Nitrogen dioxide (\nitrogendioxide) is produced from \nitricoxide which then reacts with water to form nitric acid (\nitricacid), an important actor in multiple industrial process (tab. \ref{tab:NitrogenGases}), including fertilisers such as ammonium nitrate (eq. \ref{eq:AmmoniumNitrate}).
+Nitrogen dioxide (\nitrogendioxide) is produced from \ce{NO} which then reacts with water to form nitric acid (\nitricacid), an important actor in multiple industrial process (tab. \ref{tab:NitrogenGases}), including fertilisers such as ammonium nitrate (eq. \ref{eq:AmmoniumNitrate}).
 
 \begin{align}
     \label{eq:AmmoniumNitrate}
     \nitricacid + \ammonia & \rightarrow \ammoniumnitrate
 \end{align}
 
-Hence, important selectivity towards the production of \nitricoxide must be achieved in the first stage when aiming at the production of fertilisers.
-However, at low temperature or in the absence of catalyst, the production of \nitrogen is favoured (eq. \ref{eq:AmmoniaOxidationNitrogen} - \cite{Hatscher2008}).
+Hence, important selectivity towards the production of \ce{NO} must be achieved in the first stage when aiming at the production of fertilisers.
+However, at low temperature or in the absence of catalyst, the production of \ce{N_2} is favoured (eq. \ref{eq:AmmoniaOxidationNitrogen} - \cite{Hatscher2008}).
 
-Since the 1930s, the presence of a platinum-rhodium (\qty{\approx 10}{\percent} Rh) knitted gauzes catalyst and favourable reaction conditions (e.g. \qty{900}{\degreeCelsius} - \qty{5}{\bar} - excess \dioxygen) allowed a \qty{98}{\percent} \nitricoxide yield to be achieved \parencite{Handforth1934, Heck1982}.
+Since the 1930s, the presence of a platinum-rhodium (\qty{\approx 10}{\percent} Rh) knitted gauzes catalyst and favourable reaction conditions (e.g. \qty{900}{\degreeCelsius} - \qty{5}{\bar} - excess \dioxygen) allowed a \qty{98}{\percent} \ce{NO} yield to be achieved \parencite{Handforth1934, Heck1982}.
 The reaction pathways has been proven to follow a step-by-step decomposition of ammonia on the catalyst surface by stripping the hydrogen atoms of adsorbed ammonia by dissociated surface oxygen atoms, which confirms the existence of a heterogeneous catalytic process \parencite{Bradley1995,PerezRamirez2004}.
-The final pathway towards the production of \nitrogen, \nitrousoxide or \nitricoxide depends on the oxygen density and binding on the surface.
+The final pathway towards the production of nitrogen, nitrous oxide or nitric oxide depends on the oxygen density and binding on the surface.
 HAVE TO DETAIL MORE HERE
 
 However the exact mechanism of action is not yet exactly understood.
-The role of metal-oxides has been underlined by several studies, after a few hours of catalytic reaction, the catalyst undergoes an \textit{activation process} which leads to an increase selectivity towards \nitricoxide while the gauzes undergo a transformation towards a roughened surface with the presence of \ce{PtO_2} and \ce{Rh_2O_3}.
+The role of metal-oxides has been underlined by several studies, after a few hours of catalytic reaction, the catalyst undergoes an \textit{activation process} which leads to an increase selectivity towards \ce{NO} while the gauzes undergo a transformation towards a roughened surface with the presence of \ce{PtO_2} and \ce{Rh_2O_3}.
 The rough surface has an increased area compared to the smooth surface and is responsible for the formation of metallic oxides in step and pits, \ce{PtO_2} increases the reaction rate while \ce{Rh_2O_3} leads towards the deactivation of the catalyst.
 The volatile platinum oxide is considered to be primary responsible for mass losses and the progressive deactivation of the catalyst due to the ever increasing presence of \ce{Rh_2O_3} \parencite{McCabe1986}.
 
@@ -123,23 +123,23 @@ Approximately half of the production of ammonia is lost to the environment \pare
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/ammonia/NO2pie.pdf}
     \caption{
-    Pie charts underlining the importance of different gas in the total US greenhouse gas emissions in 2021 (a) and the specific contribution of nitrogen-based fertilisers to the total \nitrousoxide emissions in 2021.
+    Pie charts underlining the importance of different gas in the total US greenhouse gas emissions in 2021 (a) and the specific contribution of nitrogen-based fertilisers to the total \ce{N_2O} emissions in 2021.
     LULUCF means Land Use, Land-Use Change, and Forestry.
     Adapted from \cite{EPAGreenhouseGases}.
     }
     \label{fig:PieGreenhouseNO2}
 \end{figure}
 
-Nevertheless, it can also be interesting to be able to remove \ammonia from the atmosphere, a colourless gas with a pungent odour, that irritates the eyes, nose, throat, and respiratory tract if inhaled in small amounts due to its corrosive nature and is poisonous in large quantities.
+Nevertheless, it can also be interesting to be able to remove \ce{NH_3} from the atmosphere, a colourless gas with a pungent odour, that irritates the eyes, nose, throat, and respiratory tract if inhaled in small amounts due to its corrosive nature and is poisonous in large quantities.
 Ammonia also pollutes and contributes to the eutrophication and acidification of terrestrial and aquatic ecosystems, and forms secondary particulate matter (PM2.5) when combined with other pollutants in the atmosphere (tab. \ref{tab:NitrogenGases}).
-In that case, the reaction must be tuned towards the production of \nitrogen which is the only non pollutant and toxic gas.
+In that case, the reaction must be tuned towards the production of \ce{N_2} which is the only non pollutant and toxic gas.
 
-Finally, the important effect of nitrogen oxides (\ce{NO_x}, \textit{i.e.} \nitricoxide and \nitrogendioxide) on the environment has brought forward the necessity to control their emissions, especially from the exhaust of diesel engines that are responsible for \qty{65}{\percent} of their emissions.
+Finally, the important effect of nitrogen oxides (\ce{NO_x}, \textit{i.e.} \ce{NO} and \ce{N_2O}) on the environment has brought forward the necessity to control their emissions, especially from the exhaust of diesel engines that are responsible for \qty{65}{\percent} of their emissions.
 The selective catalytic reaction (SCR) using urea or ammonia as reductant (tab. \ref{tab:NitrogenGases}) has proven to be effective and to reach \qty{95}{\percent} efficiency \parencite{MitsubishiSCR}.
 However, there can be a subsequent problem of unreacted ammonia \textit{slipping} from the reaction, which is also an important subject of study \parencite{Thermofischer}.
 
 Today, the ammonia oxidation is an essential catalytic reaction used in the production of nitrogen-based fertilisers and in environmental applications.
-In both cases, particular focus is on two products of the reaction, namely, \nitricoxide and \nitrogen.
+In both cases, particular focus is on two products of the reaction, namely, \ce{NO} and \ce{N_2}.
 Depending on the application of the ammonia oxidation, the catalytic reaction must be tuned towards a specific product, this \textit{selectivity} is controlled by the reaction temperature, pressure, the  reactant ratio, and the type of catalyst.
 To be able to drive the reaction, the impact of each parameter \textit{at relevant industrial conditions} on the product pressure must be studied.
 
@@ -160,17 +160,13 @@ To be able to drive the reaction, the impact of each parameter \textit{at releva
     \end{tabular}%
     }
     \caption{
-        Nitrogen based molecules that are involved in the oxidation of ammonia, \\
-        the Haber-Bosch process, the Ostwald process or nitrogen-based fertilisers.\\
-        Information compiled from various sources: \\
-        \cite{Thiemann2000, Harrison2001, Baerns2005, Imbihl2007, Hatscher2008}, \\
-        \cite{Davidson2009, Resta2020a, Borodin2021, Pottbacker2022}
+        Nitrogen based species involved in the oxidation of ammonia, the Haber-Bosch process, the Ostwald process or nitrogen-based fertilisers. Information compiled from various sources: \cite{Thiemann2000, Harrison2001, Baerns2005, Imbihl2007, Hatscher2008, Davidson2009, Resta2020a, Borodin2021, Pottbacker2022}.
     }
     \label{tab:NitrogenGases}
 \end{table}
 \end{landscape}
 
-\section{From industry to model catalysis}
+\section{From industry to model catalysis}\label{sec:LiteratureAmmonia}
 
 \epigraph{"A long standing conundrum in the catalysis community emerged at the interface between surface science and heterogeneous catalysis, better known as the pressure and materials gap."}{\textit{Nature Catalysis editorial, \cite*{NatureEditorial2018}.}}
 
@@ -223,8 +219,9 @@ The difference in activity between different crystalline facets will be studied 
     \includegraphics[height=3.75cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/sample/sxrd_sample.png}
     \caption{
     Platinum gauzes used in industry (left).
-    Reconstructed phase of a Pt particle measured at SixS, its diameter is of about \qty{300}{\nm} (middle).
-    Pt 111 single crystal used in SXRD and XPS experiments, its diameter is of about \qty{8}{\mm} (right).
+    Reconstructed Pt particle measured at SixS, with its surface coloured by the displacement of surface layers from their equilibrium positions, diameter of about \qty{300}{\nm} (middle).
+    The orientation of each facet on the particle surface is indicated.
+    Pt $(111)$ single crystal used in SXRD and XPS experiments, diameter of about \qty{8}{\mm} (right).
     }
 \end{figure}
 
@@ -237,7 +234,7 @@ It was shown that despite being a major catalytic process in a multi-billion ind
 If in the frame of this thesis, the focus will be set on the sole oxidation of ammonia, the goal is also to develop experimental methods that can speak to and attract the synchrotron neophyte to the study of heterogeneous catalysis with synchrotron radiation, together with efficient and reliable computer methods that allow good data reduction and analysis.
 
 %Indeed, if it is of prime interest for a scientist to always be able to understand the fundamentals and to be ready to answer to the question \textit{why ?}, one must also realize that the impact one has strongly depends on the application and reach of his work.
-Keeping this idea in mind, this thesis aims first at bridging the material and pressure gap to bring forth the possibility for synchrotron users to study catalytic reactions at conditions tending to "real" industry conditions.
+Keeping this idea in mind, this thesis aims first at bridging the material and pressure gap to bring forth the possibility for synchrotron users to study catalytic reactions at conditions tending to \textit{real} industry conditions.
 Secondly, a focus has also been set on explaining the origin, advantages, drawbacks and workflows of each technique, especially for Bragg coherent diffraction imaging, a technique that has yet to reach its full potential through the development of $4^{th}$-generation synchrotrons and powerful computing clusters.
 
 \section{Outline of the Thesis}
