--- a/Sections/2_Theory_Models/Catalysis.tex
+++ b/Sections/2_Theory_Models/Catalysis.tex
@@ -97,10 +97,11 @@ The activity of single facets can also be studied with \textit{single crystals},
     \includegraphics[trim=140 75 0 100, clip, height=5cm]{/home/david/Documents/PhD/Figures/bcdi_data/B7/B7_facets.png}
     \includegraphics[height=5cm]{/home/david/Documents/PhD/Figures/sample/sxrd_sample.png}
     \caption{
-        Catalytically active samples studied with x-ray \textit{operando} techniques, faceted nanoparticle (left) for which the orientation of each facet is written.
-        The area in white corresponds to edges and corners.
-        Round single crystal set on sample holder (right), the top of the crystal is the (111) facet that is also present on the nanoparticle.
-        The area of the \{111\} facets on the nanoparticle is \qty{\approx 0.25}{\um^2} and occupies \qty{20}{\percent} of its surface, whereas the surface area of the single crystal is \qty{\approx 5e7}{\um^2}.
+        Catalytically active samples studied with x-ray \textit{operando} techniques.
+        Reconstructed Pt particle measured at SixS, with its surface coloured by the displacement of surface layers from their equilibrium positions, diameter of about \qty{300}{\nm} (middle).
+        The orientation of each facet on the particle surface is indicated.
+        Pt $(111)$ single crystal used in SXRD and XPS experiments, diameter of about \qty{8}{\mm} (right).
+        $\{111\}$ facets are present on both samples, occupying \qty{\approx36}{\percent} of the particle surface.
     }
     \label{fig:Samples}
 \end{figure}
