--- a/Sections/3_Results_Nanoparticles/BCDIOxidationAmmonia.tex
+++ b/Sections/3_Results_Nanoparticles/BCDIOxidationAmmonia.tex
@@ -315,6 +315,10 @@ However, the transition can be observed in both the strain field energy (fig. \r
 The interplanar spacing computed from the position of the Bragg peak in $q$-space shows an additional transition when first introducing oxygen in the cell, not visible in the strain field energy of in the FWHMs, which can be linked to a change of strain at the interface with the substrate.
 The values of the heterogeneous surface strain $\epsilon_{zz}$ being very low (almost always below \qty{0.1}{\percent}, fig. \ref{fig:D6Facets}), it is also complicated to quantify the strain evolution.
 
+The oxidation of ammonia has been extensively studied by the means of surface techniques in the previous and current century as detailed in sec. \ref{sec:LiteratureAmmonia}.
+Since BCDI in a still a recent technique, first applied to catalysis less than 10 years ago \parencite{Ulvestad2016}, no comparative measurements can be found during the presence of ammonia or nitrogen based species.
+However, exposing Pt nanoparticles to a rich oxygen atmosphere has been
+
 \subsubsection{Mass spectrometry results}
 
 The catalytic activity of the particles was recorded \textit{via} the use of a mass spectrometer and shows the production of nitrogen, nitrous oxide and nitrogen oxide (fig. \ref{fig:RGANanoparticlesBCDIComparison}), proving the activity of the catalyst.
@@ -324,9 +328,9 @@ The original mass spectrometer signal as a function of time is available in the 
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_06_BCDI_NH3/gas_analysis/figures/product_comparison.pdf}
     \caption{
-        Evolution of reaction product partial pressures during the oxidation of ammonia at \qty{300}{\degreeCelsius}, and \qty{400}{\degreeCelsius} recorded from a leak in the reactor output as detailed in sec. \ref{sec:XCAT}.
-        The product pressure shown for each condition was computed as the mean product pressure during \qty{1}{\minute} at the end of each condition.
-        The product pressure under \qty{49}{\ml\per\min} of argon and \qty{1}{\ml\per\min} of ammonia has been subtracted.
+        Evolution of reaction product partial pressures during the BCDI experiment on the patterned sample containing Pt[111]||Al$_2$O$_3$[0001] nanoparticles, at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}.
+        Mean partial pressures during \qty{1}{\minute} at the end of each condition, recorded from a leak in the reactor output as detailed in sec. \ref{sec:XCAT}.
+        The pressure under \qty{49}{\ml\per\min} of argon and \qty{1}{\ml\per\min} of ammonia has been subtracted.
     }
     \label{fig:RGANanoparticlesBCDIComparison}
 \end{figure}
