--- a/Sections/3_Results_Nanoparticles/BCDITempRamp.tex
+++ b/Sections/3_Results_Nanoparticles/BCDITempRamp.tex
@@ -19,6 +19,7 @@ The values of the scattering and detector angles are expected to vary as a funct
 
 \textit{Gwaihir} was used to process the data using the workflow detailed in sec. \ref{sec:Gwaihir}, each dataset was saved as a \textit{cxi} file containing all of the data and metadata related to the data reduction process.
 The use of iterative algorithm for phase retrieval is detailed in tab. \ref{tab:ReconstructionProcess}.
+A first approximation of the spatial resolution of the experiments was computed by fitting the derivative of the Bragg electronic density amplitude, following the procedure detailed by Hofmann et al. \cite*{Hofmann2020}, a minimum value of \qty{30}{\nm} was found in the [111] direction throughout the experiment.
 
 \begin{table}[!htb]
 \centering
