--- a/Sections/3_Results_Nanoparticles/Introduction.tex
+++ b/Sections/3_Results_Nanoparticles/Introduction.tex
@@ -1,7 +1,7 @@
 \section{Introduction}
 
 %reaction
-During the catalytic oxidation of ammonia, if Pt catalysts were first used when aiming at the production of \ce{NO}, Pt-Rh catalysts have then proven to be more effective since the 1920s when Rhodium was first added to the catalyst \parencite{Handforth1934, Heck1982}.
+During the catalytic oxidation of ammonia, if Pt catalysts were first used when aiming at the production of \ce{NO}, Pt-Rh catalysts have then proven to be more effective since the 1920s when Rhodium was added to the catalyst \parencite{Handforth1934, Heck1982}.
 Recently, the ammonia oxidation reaction over a \ce{Pt_{25}Rh_{75}}(001) single crystal was studied with a surface science approach by operando techniques such as near-ambient pressure X-ray photoemission spectroscopy (NAP-XPS) and surface x-ray diffraction (SXRD) combined with mass spectrometry \parencite{Resta2020a}.
 It was shown that \ce{NO} production coincides with significant changes of the surface structure and the formation of a \ce{RhO_2} surface oxide.
 Moreover, changes in the surface relaxation related to the catalyst selectivity as well as the presence of an hysteresis cycle in the reaction were reported.
@@ -99,7 +99,7 @@ At room temperature, the misfit strain computed from literature values ($a_{Pt} 
 The catalytic activity of the platinum nanoparticles was first studied as a function of the temperature to (i) be certain that the sample is sufficiently catalytically active for the reaction products to be detected by the mass spectrometer, (ii) identify the catalyst light-off temperature and (iii) observe an evolution of the product selectivity as a function of the temperature.
 Similar scans where also performed on the empty reactor/sample holder to ensure the absence of activity towards the oxidation of ammonia.
 
-The heater temperature was first calibrated by measuring the temperature in the reactor at different pressures by the means of a type K thermocouple, as a function of the current intensity (fig. \ref{fig:TempRamps} - a), \qty{10}{\minute} separate consecutive datapoints to ensure the heater stability.
+The heater temperature was calibrated by measuring the temperature in the reactor at different pressures by the means of a type K thermocouple, as a function of the current intensity (fig. \ref{fig:TempRamps} - a), \qty{10}{\minute} separate consecutive datapoints to ensure the heater stability.
 The experimental data points were fit to be able to set the reactor to any temperature from \qtyrange{25}{600}{\degreeCelsius} when working under vacuum or at ambient pressure (\qty{0.3}{\bar} or \qty{0.5}{\bar} of \ce{Ar}).
 The thermal conductivity of the gases involved in the oxidation of ammonia are in the similar order of magnitude (tab. \ref{tab:ThermalConductivity}).
 Moreover, the same inert gas used to set the reactor pressure - Argon - is used as a carrier gas during the experiments, constituting at least \qty{80}{\percent} of the gas flow, and allowing us to assume that the temperature in the reaction chamber is well approximated.
