--- a/Sections/4_Results_SingleCrystals/100.tex
+++ b/Sections/4_Results_SingleCrystals/100.tex
@@ -23,18 +23,18 @@ The out-of-plane vector $\vec{c}_{(100)}$ is perpendicular to the (100) plane, a
 
 \subsection{Ammonia oxidation cycle}
 
-Reciprocal space maps were collected using the same experimental setup and at the same atmospheres detailed in tab. \ref{tab:ConditionsSXRD}, to probe the structural evolution of the sample during the oxidation of ammonia.
+Reciprocal space in-plane maps were collected using the same experimental setup and at the same atmospheres detailed in tab. \ref{tab:ConditionsSXRD}, to probe the structural evolution of the sample during the oxidation of ammonia.
 The total pressure is always kept to \qty{500}{\milli\bar}.
 Considering the square symmetry in the position of the Bragg peaks, the in-plane reciprocal space maps were collected by rotating the in-plane sample and detector angles ($\omega$ and $\gamma$) from \ang{0} to \ang{90} to collect a quarter of the reciprocal space in the ($\vec{q}_x$, $\vec{q}_y$) plane
 
-The reciprocal space map were computed in both $q$-space (to obtain the interplanar spacing related to the observed signals) and ($hkl$)-space to visualise the arrangement of surface structures or surface relaxations in comparison with the structure of the Pt atoms on the (100) surface, the $h$ and $k$ values being computed using the square surface unit cell of the Pt (100) surface.
+The reciprocal space in-plane map were computed in both $q$-space (to obtain the interplanar spacing related to the observed signals) and ($hkl$)-space to visualise the arrangement of surface structures or surface relaxations in comparison with the structure of the Pt atoms on the (100) surface, the $h$ and $k$ values being computed using the square surface unit cell of the Pt (100) surface.
 
 \begin{figure}[!htb]
     \centering
     \includegraphics[width=0.495\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/Map_hkl_surf_or_1335-1375.pdf}
     \includegraphics[width=0.495\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/Map_hkl_surf_or_1596-1635_patched.pdf}
     \caption{
-        Reciprocal space maps collected under different atmospheres measured at \qty{450}{\degreeCelsius}, computed using the surface lattice of Pt (100).
+        Reciprocal space in-plane maps collected under different atmospheres measured at \qty{450}{\degreeCelsius}, computed using the surface lattice of Pt (100).
     }
     \label{fig:MapsPt100A}
 \end{figure}
@@ -43,7 +43,7 @@ The first map was collected under \qty{500}{\milli\bar} of Ar, after the cleanin
 The (200), (1$\bar{1}$0) and (0$\bar{2}$0) Bragg peaks can be observed, together with the extremity of [100]-oriented crystal truncation rods going through the [0, 1, 0] and [0, $\bar{1}$, 0] positions in reciprocal space.
 
 Two different types of peaks can be observed under \qty{80}{\milli\bar} of oxygen, identified by red and green circles in fig. \ref{fig:MapsPt100A}.
-The red peaks are situated at intermediate positions in reciprocal space in comparison with the Pt (100) lattice (H, K) = (1, $\bar{0.5}$), (H, K) = (1, $\bar{1.5}$), (H, K) = (0.5, $\bar{1}$) and (H, K) = (0.5, $\bar{1.5}$).
+The red peaks are situated at intermediate positions in reciprocal space in comparison with the Pt (100) lattice [H, K] = [1, $\bar{0.5}$], [H, K] = [1, $\bar{1.5}$], [H, K] = [0.5, $\bar{1}$] and [H, K] = [0.5, $\bar{1.5}$].
 The green peaks are slightly shifted from the red peaks by the same amount $\delta = 0.07$ in either H or K.
 
 Four consecutive out-of-plane measurements were performed perpendicular to four peaks, two of each type, up to $L=3.5$ to probe the related out-of-plane structure.
@@ -58,7 +58,7 @@ The background-subtracted intensity was integrated as a function of $L$ using th
     \label{fig:LScansHighOxygenPt100}
 \end{figure}
 
-The intensity as a function of $L$ for the shifted peaks was found to quickly decrease down to zero, which shows that they do not correspond to 3D structures but are more characteristic of monolayers with no out-of-plane periodicity \parencite{Robinson1991}.
+The intensity as a function of $L$ for the shifted peaks was found to quickly decrease down to zero, which shows that they do not correspond to 3D structures but are more characteristic of monolayers with no out-of-plane periodicity (fig. \ref{fig:SimROD}, Robinson et al. \cite*{Robinson1991}).
 No corresponding surface unit cell could be derived from their in-plane positions.
 
 However, four peaks at different $L$ values are visible on both $L$-scans perpendicular to the red circled peak, including at $L=0$, which is characteristic of a bulk structure, \textit{i.e.} more than a few unit cells thick \parencite{Robinson1991}.
@@ -70,7 +70,7 @@ Corresponding interplanar spacings were computed from the position of the peaks,
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/ctr_reconstructions_fitting_result}
     \caption{
-        Fit result for the two $L$-scans performed perpendicular to (H, K) = (0.5, $\bar{1}$) and (H, K) = (1, $\bar{1.5}$).
+        Fit result for the two $L$-scans performed perpendicular to [H, K] = [0.5, $\bar{1}$] and [H, K] = [1, $\bar{1.5}$].
         The different peaks were indexed using a distorted cubic structure, corresponding to bulk \ce{Pt_3O_4}.
     }
     \label{fig:FitPt100LScans}
@@ -78,7 +78,7 @@ Corresponding interplanar spacings were computed from the position of the peaks,
 
 Bulk \ce{Pt_3O_4} was reported to crystallise in a simple cubic structure with a lattice parameter equal to \qty{5.65}{\angstrom} \parencite{Galloni1941, Galloni1952, Muller1968}, more recent studies have proposed a theoretical value of \qty{5.59}{\angstrom} \parencite{Seriani2006}, already presented in tab. \ref{tab:PtOxides}, similarly to the parameters reported in this study.
 The 3D structure of bulk \ce{Pt_3O_4} is presented in fig. \ref{fig:Pt3O4}.
-It is not yet clear why the (212) and (232) peaks are missing from the out-of-plane measurements.
+The (212) and (232) Bragg peaks are not allowed reflections.
 
 \begin{SCfigure}
     \centering
@@ -102,26 +102,26 @@ For bulk \ce{Pt_3O_4} this would correspond to approximately 11 unit cells.
     \includegraphics[width=0.495\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/Map_hkl_surf_or_1880-1902_patched.pdf}
     \includegraphics[width=0.495\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/Map_hkl_surf_or_1930-1936_patched.pdf}
     \caption{
-        Reciprocal space maps collected under different atmospheres measured at \qty{450}{\degreeCelsius}, computed using the surface lattice of Pt (100).
+        Reciprocal space in-plane maps collected under different atmospheres measured at \qty{450}{\degreeCelsius}, computed using the surface lattice of Pt (100).
     }
     \label{fig:MapsPt100B}
 \end{figure}
 
 Introducing ammonia in the reactor has resulted in the loss of contact with the sample heater, from the corrosion of the screws responsible for the contact on the sample holder.
-Nevertheless, half of the large reciprocal space could be measured prior to the loss of alignment (fig. \ref{fig:MapsPt100B}), in which the red circled peaks corresponding to \ce{Pt_3O_4} are still visible, the two other peaks that could have been measured at (0.93, -0.5) and (0.5, -0.93) have disappeared.
+Nevertheless, half of the large reciprocal space in-plane maps could be measured prior to the loss of alignment (fig. \ref{fig:MapsPt100B}), in which the red circled peaks corresponding to \ce{Pt_3O_4} are still visible, the two other peaks that could have been measured at (0.93, -0.5) and (0.5, -0.93) have disappeared.
 The sample was removed and cleaned to fix the sample heater, and then introduced in the reactor.
-In order to probe for the reproducibility of the \ce{Pt_3O_4} growth on the surface, the partial pressure of oxygen was set to \qty{80}{\milli\bar} again, while measuring a small area of the reciprocal space to detect the same peaks as in fig. \ref{fig:MapsPt100A}.
+In order to probe for the reproducibility of the \ce{Pt_3O_4} growth on the surface, the partial pressure of oxygen was set to \qty{80}{\milli\bar} again, while measuring a small area of the in-plane reciprocal space to detect the same peaks as in fig. \ref{fig:MapsPt100A}.
 The same peaks could indeed be detected as shown in fig. \ref{fig:MapsPt100B} but with a shift between the green and red circled peaks equal to $0.09$, more important than the previously measured value of $0.07$.
 
 Ammonia was again introduced in the cell to be able to probe the relation between surface structure and selectivity during the oxidation of ammonia.
-Interestingly, a different behaviour was measured during the following reciprocal space map (fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia}).
+Interestingly, a different behaviour was measured during the following reciprocal space in-plane map (fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia}).
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=0.59\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/Map_hkl_surf_or_1953-1981_patched.pdf}
-    \includegraphics[width=0.39\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/l_scans_high_oxygen_ammonia_no_map.pdf}
+    \includegraphics[width=0.53\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/Map_hkl_surf_or_1953-1981_patched.pdf}
+    \includegraphics[width=0.46\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/l_scans_high_oxygen_ammonia_no_map.pdf}
     \caption{
-        Reciprocal space maps collected under different atmospheres measured at \qty{450}{\degreeCelsius}, computed using the surface lattice of Pt (100).
+        Reciprocal space in-plane maps collected under different atmospheres measured at \qty{450}{\degreeCelsius}, computed using the surface lattice of Pt (100).
         Out-of plane measurements for four different positions under \qty{80}{\milli\bar} of \ce{O_2}, \qty{10}{\milli\bar} of \ce{NH_3}, and \qty{410}{\milli\bar} of \ce{Ar}.
     }
     \label{fig:MapsAndLScansPt100HighOxAmmonia}
@@ -130,14 +130,14 @@ Interestingly, a different behaviour was measured during the following reciproca
 Peaks separated by $0.1$ in H or in K were observed around the platinum Bragg peaks in a square arrangement, similarly to a (10x10) surface reconstruction, but with some extinctions.
 The only row and columns in which the reconstructions are also seen that do not got through a Bragg peak are also shifted by the same amount equal to $0.09$ as the green circled signals observed while only oxygen is present in the cell.
 Out-of-plane measurements were performed perpendicular to four peaks, also presented in fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia}.
-The peaks measured earlier perpendicular to (H, K) = (0.5, -1) at $L=0.7$, $L=1.4$, and $L=2.1$ corresponding to bulk \ce{Pt_3O_4} are no longer visible.
+The peaks measured earlier perpendicular to [H, K] = [0.5, $\bar{1}$] at $L=0.7$, $L=1.4$, and $L=2.1$ corresponding to bulk \ce{Pt_3O_4} are no longer visible.
 
 It is not certain that bulk \ce{Pt_3O_4} was present on the catalyst surface at the beginning of the reacting conditions.
 Indeed, the sample was exposed to \qty{80}{\milli\bar} of oxygen for \qty{12}{\hour} when the bulk oxide could be measured.
 The second exposition only lasted for \qty{1}{\hour}, during which the same in-plane could effectively be measured, but without out-of-plane information.
 Therefore it is not clear whether the lack of bulk oxide is due to its removal from the reacting conditions or from the shorter exposition to a high oxygen atmosphere.
 However, it is clear that the duration of the high oxygen condition, probably linked to the thickness of the \ce{Pt_3O_4} layer, has an effect on the catalyst surface during reaction condition since the in-plane signals measured after the introduction of ammonia are very different.
-Regarding the $L$-scan at (H, K) = (1.9, 0), the two peaks near $L=0.1$ and $L=2.1$ are coming from the nearby Bragg peaks.
+Regarding the $L$-scan at [H, K] = [1.9, 0], the two peaks near $L=0.1$ and $L=2.1$ are coming from the nearby Bragg peaks.
 Otherwise, no structures signal in $L$ can be observed.
 
 \ce{Pt_3O_4} has been proven to be a source of oxygen atoms sustaining the catalytic oxygenation of \ce{CO} \textit{via} a Mars Van Krevelen mechanism \parencite{Seriani2006, Seriani2008}.
@@ -147,17 +147,17 @@ It is possible that the (10x10)-type reconstructions observed in the current exp
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=0.59\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/Map_hkl_surf_or_2227-2283_patched.pdf}
-    \includegraphics[width=0.39\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/l_scans_low_oxygen_ammonia.pdf}
+    \includegraphics[width=0.53\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/Map_hkl_surf_or_2227-2283_patched.pdf}
+    \includegraphics[width=0.46\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/l_scans_low_oxygen_ammonia.pdf}
     \caption{
-        Reciprocal space maps collected under different atmospheres measured at \qty{450}{\degreeCelsius}, computed using the surface lattice of Pt (100).
+        Reciprocal space in-plane maps collected under different atmospheres measured at \qty{450}{\degreeCelsius}, computed using the surface lattice of Pt (100).
         Out-of plane measurements for four different positions under \qty{5}{\milli\bar} of \ce{O_2}, \qty{10}{\milli\bar} of \ce{NH_3}, and \qty{485}{\milli\bar} of \ce{Ar}.
     }
     \label{fig:MapsAndLScansPt100LowOxAmmonia}
 \end{figure}
 
 Lowering the partial pressure of oxygen from \qty{80}{\milli\bar} to \qty{5}{\milli\bar} in the reactor has completely removed the square (10x10) reconstruction phenomena and revealed the existence of two hexagonal arrangements on top on the Pt (100) surface (fig. \ref{fig:MapsAndLScansPt100LowOxAmmonia}), with an in-plane lattice parameter equal to \qty{2.685}{\angstrom}, \qty{\approx 3.36}{\percent} lower than the distance between neighbouring Pt atoms on the Pt (100) surface.
-Second order peaks can also be seen at the edge of the reciprocal space map, each domain has one axis parallel to either $\vec{a}_{(100)}$ or $\vec{b}_{(100)}$, \textit{i.e.} respectively in the [110] and [1-10] directions.
+Second order peaks can also be seen at the edge of the reciprocal space in-plane map, each domain has one axis parallel to either $\vec{a}_{(100)}$ or $\vec{b}_{(100)}$, \textit{i.e.} respectively in the [110] and [1$\bar{1}$0] directions.
 
 Different hexagonal surface reconstructions on the Pt (100) surface have been reported also in the [110] direction at UHV conditions, summarised in \cite{Hammer2016}, based on an important body of work \parencite{Heilmann1979, Vanhove1981, Heinz1982, Mase1992, Kuhnke1992, Borg1994, VanBeurden2004, Havu2010}, evolving to rotated hexagonal reconstructions with angles between \ang{0.77} and \ang{0.94} depending on the sample temperature and on the previous temperature treatment.
 The unit cell describing those reconstructions with respect to the Pt (100) surface varies, if first contained to (5XN) where N = 20–30, the latest study reports a commensurate c(26X118) superstructure.
@@ -179,12 +179,12 @@ Out-of-plane measurements were performed perpendicular to two peaks, also presen
     \includegraphics[width=0.495\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/Map_hkl_surf_or_2905-2953_patched.pdf}
     \includegraphics[width=0.495\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/Map_hkl_surf_or_3154-3169.pdf}
     \caption{
-        Reciprocal space maps collected under different atmospheres measured at \qty{450}{\degreeCelsius}, computed using the surface lattice of Pt (100).
+        Reciprocal space in-plane maps collected under different atmospheres measured at \qty{450}{\degreeCelsius}, computed using the surface lattice of Pt (100).
     }
     \label{fig:MapsPt100C}
 \end{figure}
 
-After removing oxygen from the reactor, only the first order reflections corresponding to the hexagonal structures could be detected during the measurement of the reciprocal space map (fig. \ref{fig:MapsPt100C}), the following measurement under Argon showed a clean Pt (100) surface.
+After removing oxygen from the reactor, only the first order reflections corresponding to the hexagonal structures could be detected during the measurement of the reciprocal space in-plane map (fig. \ref{fig:MapsPt100C}), the following measurement under Argon showed a clean Pt (100) surface.
 To make sure that the hexagonal structure was related to the reaction conditions and not only to a lower pressure of oxygen in the reactor, a partial pressure of \qty{5}{\milli\bar} of oxygen was set.
 The following measurement showed the presence of many peaks that appeared in the first hour of the measurement.
 A second map was measured directly after the end of the first map, in which none of the newly detected peaks could be detected.
@@ -210,9 +210,9 @@ The presence of those peaks prevent us from resolving the minimal position of th
 
 The catalyst surface can be divided in three different components as a function of $\vec{z}$.
 First, there is bulk Pt (100) in which the structure is homogeneous.
-Secondly, there is the interface between bulk platinum and the different islands of \ce{Pt_3O_4}, in which the platinum atoms are expected to be displaced from their equilibrium positions due to the interaction with the bulk oxide, and where there could also be the presence of some subsurface oxygen atoms.
+Secondly, there is the interface between bulk platinum and the different islands of \ce{Pt_3O_4}, in which the platinum atoms are expected to be displaced from their equilibrium positions due to the interaction with the oxide layer, and where there could also be the presence of some subsurface oxygen atoms.
 Thirdly, there are the \ce{Pt_3O_4} islands, on top of the previous layers, with different heights.
-The deconvolution of the signals originating from the different layers is complicated due to the very large amount of parameters needed to properly simulate the CTR intensity, and the impossibility simulate more than two different surface areas with \textit{ROD}.
+The deconvolution of the signals originating from the different layers is complicated due to the very large amount of parameters needed to properly simulate the CTR intensity, and the impossibility to simulate more than two different surface areas with \textit{ROD}.
 A first approach to understanding the catalyst surface is presented below.
 
 \begin{figure}[!htb]
@@ -224,8 +224,8 @@ A first approach to understanding the catalyst surface is presented below.
     \label{fig:CTRFitHighOxygen}
 \end{figure}
 
-The structure factors $F_i$ resulting from the presence of one to 9 layers on the Pt (100) surface of \ce{Pt_3O_4} was simulated with \textit{ROD}.
-The fitting routine consists in minimising the square root difference between the CTR structure factors $F_{obs}$ and the square root of the  coherent sum of the squared simulated structure factors by adjusting the weight $W_i$ of each signal in the total signal $F_{calc}$ (eq. \ref{eq:Fcalc}).
+The structure factors $F_i$ resulting from the presence of one to nine unit cells on the Pt (100) surface of \ce{Pt_3O_4} was simulated with \textit{ROD}, the same interface with the substrate is used in each simulation, a $\beta$ roughness parameter of 0.6 was used.
+The fitting routine consists in minimising the square root difference between the CTR structure factors $F_{obs}$ and the square root of the coherent sum of the squared simulated structure factors by adjusting the weight $W_i$ of each signal in the total signal $F_{calc}$ (eq. \ref{eq:Fcalc}).
 
 \begin{equation}
     F_{calc} = \sqrt{\sum_{i=1}^{9} W_i F_i^2}
@@ -234,10 +234,10 @@ The fitting routine consists in minimising the square root difference between th
 
 The relation between each weight was adjusted by following a Gaussian distribution, expecting the different islands to not differ too much in height.
 The result of the fitting routine are presented in fig. \ref{fig:CTRFitHighOxygen}, and show a Gaussian distribution centred around $3.6$ unit cells, with a standard deviation $\sigma$ equal to $1.3$ unit cells.
-The position and width of the \ce{Pt_3O_4} peaks are well adjusted, especially for the CTR measured perpendicularly to ([H, K] = [4, 0]).
-The simulation struggles however to reproduce regions between Pt and \ce{Pt_3O_4} Bragg peaks where the signal seems to be more convoluted.
-There is a difference of a factor three when comparing the results with the average thickness of \qty{\approx 60}{\angstrom} given by fitting the $L$-scans in fig. \ref{fig:LScansHighOxygenPt100}, since each unit cell is expected to be \qty{\approx5.64}{\angstrom} thick.
-Overall, the existence of bulk \ce{Pt_3O_4} islands is confirmed.
+The position and width of the \ce{Pt_3O_4} peaks are well adjusted, the simulation struggles however to reproduce the intensity when below a certain threshold.
+The ratio of intensty between the \ce{Pt_3O_4} peaks is also not perfect and could be further adjusted by changing the type of oxide layer present at the interface as well as the distance between the oxide and surface.
+There is a large difference when comparing the results with the average thickness of \qty{\approx 60}{\angstrom} given by fitting the $L$-scans in fig. \ref{fig:LScansHighOxygenPt100}, since each unit cell is expected to be \qty{\approx5.64}{\angstrom} thick.
+Overall, the existence of bulk \ce{Pt_3O_4} islands is confirmed to remove the coherent fringes visible when a homogeneous layer is present of the sample surface (fig. \ref{fig:SimROD}).
 
 When observing the CTR intensity under other atmospheres, a clear evolution in the position of the minimum intensity between both reacting conditions (in red and green in fig. \ref{fig:CTRPt100}) is visible.
 The CTR recorded after exposition to reacting conditions under ammonia or under argon have similar intensities and are almost indistinguishable.
