--- a/Sections/4_Results_SingleCrystals/111.tex
+++ b/Sections/4_Results_SingleCrystals/111.tex
@@ -22,7 +22,7 @@ The out-of-plane vector $\vec{c}_{(111)}$ is perpendicular to the (111) plane, a
 
 To be able to identify the presence of surface reconstructions and/or surface oxides, in-plane reciprocal space maps were collected at the atmospheres detailed in tab. \ref{tab:ConditionsSXRD} by rotating the in-plane sample and detector angles ($\omega$ and $\gamma$) from \ang{0} to \ang{120} to collect a third of the reciprocal space in the ($\vec{q}_x$, $\vec{q}_y$) plane, considering a hexagonal symmetry in the position of the Bragg peaks.
 
-The reciprocal space map were computed in both $q$-space (to obtain the interplanar spacing related to the observed signals) and ($hkl$)-space (fig. \ref{fig:MapsPt111A} and \ref{fig:MapsPt111B}) to visualise the arrangement of surface structures or surface relaxations in comparison with the hexagonal structure of the Pt atoms on the (111) surface, the $h$ and $k$ values being computed using the hexagonal surface unit cell described above.
+The reciprocal space in-plane map were computed in both $q$-space (to obtain the interplanar spacing related to the observed signals) and ($hkl$)-space (fig. \ref{fig:MapsPt111A} and \ref{fig:MapsPt111B}) to visualise the arrangement of surface structures or surface relaxations in comparison with the hexagonal structure of the Pt atoms on the (111) surface, the $H$ and $K$ values being computed using the hexagonal surface unit cell described above.
 
 % The alignment of the sample was often lost during reciprocal space maps which prevented long continuous measurements, even under inert atmosphere (e.g. fig. \ref{fig:MapsPt111B} - \qty{500}{\milli\bar} of Argon).
 % The sample proved to be more stable after having lowered the pressure of oxygen in the reactor (fig. \ref{fig:MapsPt111B}).
@@ -37,7 +37,7 @@ The reciprocal space map were computed in both $q$-space (to obtain the interpla
     \includegraphics[width=0.495\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/map_hkl_481-516_patched.pdf}
     \includegraphics[width=0.495\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/map_hkl_681-689_patched.pdf}
     \caption{
-        Reciprocal space maps collected under different atmospheres measured at \qty{25}{\degreeCelsius} under UHV and at \qty{450}{\degreeCelsius} under different atmospheres, with a total pressure equal to \qty{500}{\milli\bar}, computed using the hexagonal lattice of Pt (111).
+        reciprocal space in-plane maps collected under different atmospheres measured at \qty{25}{\degreeCelsius} under UHV and at \qty{450}{\degreeCelsius} under different atmospheres, with a total pressure equal to \qty{500}{\milli\bar}, computed using the hexagonal lattice of Pt (111).
     }
     \label{fig:MapsPt111A}
 \end{figure}
@@ -50,8 +50,8 @@ The angle between the peaks circled in grey and white and the peaks circled in r
 No apparent second order peak can be linked to those rotated hexagonal structures.
 Summing the two vectors going from the centre of the reciprocal space to the white and purple circled peaks yields the position of the black circled peak, the angle between both vectors is then equal to \ang{42.65}.
 
-The measurement of the entire reciprocal space map took about \qty{3}{\hour}\qty{35}{\minute}, the entire map being a concatenation of multiple $\omega$ scans during which the plane of the sample is rotated, the first scan starting near the centre of the reciprocal space.
-The contribution of each scan in the reciprocal space map is visible from their different background.
+The measurement of the entire reciprocal space in-plane map took about \qty{3}{\hour}\qty{35}{\minute}, the entire map being a concatenation of multiple $\omega$ scans during which the plane of the sample is rotated, the first scan starting near the centre of the reciprocal space.
+The contribution of each scan during the measurement is visible from their different background.
 Therefore, there is approximately \qty{1}{\hour} between the measurement of the peaks circled in red, grey, purple and white, and the peak circled in black.
 
 A second map was measured in a smaller region of the reciprocal space \qty{9}{\hour}\qty{30}{\minute} after the introduction of oxygen in the cell (fig. \ref{fig:MapsPt111A}) to see if the intensity and position of the newly found peaks changed.
@@ -59,12 +59,11 @@ The measurement of this map took about \qty{1}{\hour}\qty{15}{\minute}.
 Three additional peaks (circled in black) appeared on a (8X8) coincidence with comparison to the hexagonal lattice of Pt (111), describing also a hexagonal lattice (drawn in black dotted lines) of lattice parameter equal to $|\vec{a_{hex}}| = \qty{3.118}{\angstrom}$.
 
 The grey circled peak seems to have disappeared from the reciprocal map, but an additional peak circled in red is revealed at \ang{120} from the other peak circled in red, and \qty{60} from the peak circled in grey, at the same distance from the centre.
-% [-101] and [1-10] eg ?
-From these first measurement, a first hypothesis to explain the position of the observed peaks is that (i) there first appears two rotated hexagonal structures with a larger in-plane lattice parameter in comparison to Pt (111), (ii) there secondly appears a (8X8) hexagonal structure while measuring the large reciprocal space map, also with a larger in-plane lattice parameter, but in the same direction as the in-plane unit cell vectors of Pt (111), explaining the position of the black circled peak in the first map.
+From these first measurement, a first hypothesis to explain the position of the observed peaks is that (i) there first appears two rotated hexagonal structures with a larger in-plane lattice parameter in comparison to Pt (111), (ii) there secondly appears a (8X8) hexagonal structure while measuring the large reciprocal space in-plane map, also with a larger in-plane lattice parameter, but in the same direction as the in-plane unit cell vectors of Pt (111), explaining the position of the black circled peak in the first map.
 It is possible that the disappearance of the grey circle peak is linked to some alignment problems, visible from the large low intensity region in fig. \ref{fig:MapsPt111A}.
 
-Out-of-plane measurements were performed perpendicular to peaks belonging to the (8X8) hexagonal structure ([H, K] = [-0.89, 0], fig. \ref{fig:LScans80} - a) and rotated hexagonal structures ([H, K] = [-0.15, -0.74], fig. \ref{fig:LScans80} - b) to probe their 3D structures.
-A second out-of-plane measurement was performed at ([H, K] = [-1.78, 0]) to probe the intensity of a potential second-order peak for the (8X8) hexagonal structure (fig. \ref{fig:LScans80} - c), \qty{10}{\hour} after the measurement perpendicular to ([H, K] = [-0.89, 0]).
+Out-of-plane measurements were performed perpendicular to peaks belonging to the (8X8) hexagonal structure, [H, K] = [-0.89, 0] (fig. \ref{fig:LScans80} - a), and rotated hexagonal structures, [H, K] = [-0.15, -0.74] (fig. \ref{fig:LScans80} - b), to probe their 3D structures.
+A second out-of-plane measurement was performed at [H, K] = [-1.78, 0] to probe the intensity of a potential second-order peak for the (8X8) hexagonal structure (fig. \ref{fig:LScans80} - c), \qty{10}{\hour} after the measurement perpendicular to [H, K] = [-0.89, 0].
 The background-subtracted scattered intensity was integrated as a function of $L$ using the \textit{fitaid} module of \textit{binoculars} (fig. \ref{fig:LScans80}).
 
 \begin{figure}[!htb]
@@ -76,7 +75,7 @@ The background-subtracted scattered intensity was integrated as a function of $L
     \label{fig:LScans80}
 \end{figure}
 
-The integrated intensity perpendicular to ([H, K] = [-0.15, -0.74]) shows a small peak at $L\approx 0.2$ followed by a constant intensity, characteristic of non-periodic out-of-plane structures such as monolayers \parencite{Robinson1991}.
+The integrated intensity perpendicular to [H, K] = [-0.15, -0.74] shows a small peak at $L\approx 0.2$ followed by a constant intensity, characteristic of non-periodic out-of-plane structures such as monolayers (fig. \ref{fig:SimROD}, Robinson et al. \cite*{Robinson1991}).
 
 Four different bulk platinum oxides have been reported to exist in literature, $\alpha$-\ce{PtO_2}, $\beta$-\ce{PtO_2}, \ce{Pt_3O_4} and \ce{PtO}, the experimental structures are describes in tab. \ref{tab:PtOxides} together with the expected equilibrium structure found by Seriani et al \parencite*{Seriani2006, Seriani2008} from first-principles atomistic thermodynamics calculations and molecular dynamics simulations based on density functional theory.
 
@@ -129,9 +128,9 @@ The question of the epitaxial relation between both structures remains, since th
 % Ellinger et al. \parencite*{Ellinger2008} proposed
 % As our ﬁt is not compatible with domain formation, we are forced to conclude that oxide formation is initiated at step edges.
 Similarly to the current experiment, an (8X8) coincidence is reported between the Pt (111) hexagonal surface and surface $\alpha$-\ce{PtO_2}.
-The out-of-plane measurements in \cite{Ellinger2008} also performed perpendicular to ([H, K] = [-0.89, 0]) presents a peak at $L=0.65$ ($L$ computed using the distorted $\alpha$-\ce{PtO_2} unit cell).
+The out-of-plane measurements in \cite{Ellinger2008} also performed perpendicular to [H, K] = [-0.89, 0] presents a peak at $L=0.65$ ($L$ computed using the distorted $\alpha$-\ce{PtO_2} unit cell).
 
-The two $L$-scans performed in the current study were fitted using two Gaussian peaks of same full width at half maxima (FWHM) and a constant background (fig. \ref{fig:LScans80Fit}), the second peak near $L=1$ in the $L$-scan perpendicular to ([H, K] = [-0.89, 0]) comes from a Pt powder signal.
+The two $L$-scans performed in the current study were fitted using two Gaussian peaks of same full width at half maxima (FWHM) and a constant background (fig. \ref{fig:LScans80Fit}), the second peak near $L=1$ in the $L$-scan perpendicular to [H, K] = [-0.89, 0] comes from a Pt powder signal.
 
 \begin{figure}[!htb]
     \centering
@@ -157,7 +156,7 @@ Additional simulations are needed to fully understand the structures present in 
     \label{fig:Reflecto80}
 \end{figure}
 
-Reflectivity curves measured in a specular geometry and fitted using \textit{GenX} are presented in fig. \ref{fig:Reflecto80}.
+Reflectivity curves measured in a specular geometry and fitted using \textit{GenX} \parencite{Bjorck2007, Glavic2022} are presented in fig. \ref{fig:Reflecto80}.
 A simple model was used consisting of a slab of platinum on top of which is present a homogeneous layer.
 The density of the layer was set free during the minimisation process between zero and \qty{0.021172}{FU\per\cubic\angstrom}, the value for $\alpha$-PtO$_2$.
 The fitted density values is divided by two between the first (\qty{0.00727}{FU\per\cubic\angstrom}) and second (\qty{0.00358}{FU\per\cubic\angstrom}) measurement, and is always an order of magnitude below the expected value for a homogeneous layer of $\alpha$-PtO$_2$.
@@ -183,14 +182,14 @@ Ammonia was subsequently introduced in the reactor cell to investigate the evolu
     \includegraphics[width=0.495\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/map_hkl_1413-1448.pdf}
     \includegraphics[width=0.495\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/map_hkl_1458-1493.pdf}
     \caption{
-        Reciprocal space maps collected under different atmospheres measured at \qty{450}{\degreeCelsius}, computed using the hexagonal lattice of Pt (111).
+        reciprocal space in-plane maps collected under different atmospheres measured at \qty{450}{\degreeCelsius}, computed using the hexagonal lattice of Pt (111).
     }
     \label{fig:MapsPt111B}
 \end{figure}
 
 None of the previously observed peaks could be discerned anew, and no additional peaks emerged.
 Even when the oxygen pressure within the cell was reduced to \qty{5}{\milli\bar} (favouring alternate products) or eliminated at \qty{0}{\milli\bar}, there was no induction of surface reconstructions or surface structures.
-All reciprocal space maps following the introduction of ammonia to a final atmosphere of \qty{500}{\milli\bar} of Argon showed a pristine surface structure, proving the oxidation cycle is reproducible and that ammonia effectively removed the different surface oxides that grew under \qty{80}{\milli\bar} of oxygen.
+All reciprocal space in-plane maps following the introduction of ammonia to a final atmosphere of \qty{500}{\milli\bar} of Argon showed a pristine surface structure, proving the oxidation cycle is reproducible and that ammonia effectively removed the different surface oxides that grew under \qty{80}{\milli\bar} of oxygen.
 
 \begin{figure}[!htb]
     \centering
@@ -211,14 +210,14 @@ The largest decrease in roughness is seen during the reacting conditions.
 
 Following the complete ammonia oxidation cycle, the sample was put under \qty{5}{\milli\bar} of oxygen to see if any of the detected surface structures would come to grow again, and to de-correlate the effect of the simultaneous presence of ammonia and oxygen in the cell on the surface when favouring the production of nitrogen at lower oxygen pressures.
 The sample was cleaned with two sputtering and annealing cycles before the introduction of oxygen.
-Large and small reciprocal space maps were measured to have the best compromise between a higher temporal resolution of the oxide growth, and the possibility to detect other peaks from corresponding surface unit cells.
-The larger reciprocal space maps are presented in fig. \ref{fig:LargeMapsPt111LowOxygen}.
+Large and small reciprocal space in-plane maps were measured to have the best compromise between a higher temporal resolution of the oxide growth, and the possibility to detect other peaks from corresponding surface unit cells.
+The larger reciprocal space in-plane maps are presented in fig. \ref{fig:LargeMapsPt111LowOxygen}.
 
 \begin{figure}[!htb]
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/large_maps_05O2.pdf}
     \caption{
-        Reciprocal space maps collected under \qty{495}{\milli\bar} of argon and \qty{5}{\milli\bar} of oxygen at \qty{450}{\degreeCelsius}, for different exposure times.
+        reciprocal space in-plane maps collected under \qty{495}{\milli\bar} of argon and \qty{5}{\milli\bar} of oxygen at \qty{450}{\degreeCelsius}, for different exposure times.
     }
     \label{fig:LargeMapsPt111LowOxygen}
 \end{figure}
@@ -226,9 +225,9 @@ The larger reciprocal space maps are presented in fig. \ref{fig:LargeMapsPt111Lo
 In the first map, that started directly after the stabilisation of the oxygen pressure at \qty{5}{\milli\bar} in the reactor cell, three low intensity peaks can be detected that correspond to the same peaks detected previously shortly after having a pressure of \qty{80}{\milli\bar} in the cell (fig. \ref{fig:LargeMapsPt111LowOxygen}).
 Only the grey circled peak cannot be detected until \qty{4}{hours} of measurement, which is also when some peaks start to split in a similar pattern, exhibiting three distinct peaks around a more diffuse region.
 This splitting of the peaks could be the signature of a Pt (111) surface covered by different domains exhibiting similar hexagonal structures, slightly different from each other, while being themselves rotated by $\pm \ang{6}$ with respect to the Pt (111) surface unit cell with a higher magnitude of the in-plane lattice parameter, similarly to what has been observed under an oxygen pressure of \qty{80}{\milli\bar}.
-A peak can be observed at (-0.89, -0.89) in the only large reciprocal space map collected between \qty{41}{\minute} and \qty{4}{\hour}\qty{3}{\minute} after the start of the condition, at the same position as in the first large reciprocal space map measured under \qty{80}{\milli\bar} of oxygen.
-The peak position corresponds to the (-1, -1, 0)$_{\alpha-PtO_2}$ Bragg peak of bulk $\alpha-PtO_2$, but no peaks at (-0.89, 0, 0) and (0, -0.89, 0) positions can be detected (respectively (-1, 0, 0)$_{\alpha-PtO_2}$ and (0, -1, 0)$_{\alpha-PtO_2}$).
-The nature of the peak situated at (-0.89, -0.89) is not yet clear since it appears before the (-0.89, 0) and (0, -0.89) peaks, all three positions corresponding to the (8X8) hexagonal structure.
+A peak can be observed at [-0.89, -0.89] in the only large reciprocal space in-plane map collected between \qty{41}{\minute} and \qty{4}{\hour}\qty{3}{\minute} after the start of the condition, at the same position as in the first large reciprocal space in-plane map measured under \qty{80}{\milli\bar} of oxygen.
+The peak position corresponds to the ($\bar{1}\bar{1}0$)$_{\alpha-PtO_2}$ Bragg peak of bulk $\alpha-PtO_2$, but no peaks at [-0.89, 0, 0] and [0, -0.89, 0] positions can be detected (respectively ($\bar{1}00$)$_{\alpha-PtO_2}$ and ($0\bar{1}0$)$_{\alpha-PtO_2}$).
+The nature of the peak situated at [-0.89, -0.89] is not yet clear since it appears before the [-0.89, 0] and [0, -0.89] peaks, all three positions corresponding to the (8X8) hexagonal structure.
 As mentioned before, it is possible to draw a surface unit cell including this peak together with the white and purple circled peak, but with an in-plane angle $\gamma^*$ equal in this case to \ang{42.13}.
 
 The area sampled during the measurement was extended in the two last maps which allows us to observe more signals around the ($1\bar{1}0$) region.
@@ -243,7 +242,7 @@ Smaller maps taken with a shorter time interval are presented in fig. \ref{fig:S
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/small_maps_05O2.pdf}
     \caption{
-        Reciprocal space maps collected under \qty{495}{\milli\bar} of argon and \qty{5}{\milli\bar} of oxygen at \qty{450}{\degreeCelsius}, for different exposure times.
+        reciprocal space in-plane maps collected under \qty{495}{\milli\bar} of argon and \qty{5}{\milli\bar} of oxygen at \qty{450}{\degreeCelsius}, for different exposure times.
     }
     \label{fig:SmallMapsPt111LowOxygen}
 \end{figure}
@@ -251,8 +250,8 @@ Smaller maps taken with a shorter time interval are presented in fig. \ref{fig:S
 A more quantitative analysis of the different structures appearing during the exposition to oxygen was performed by integrating the scattered intensity around the white, red and black circled peak, present in the ($\bar{1}$10) region.
 The average background was subtracted to each reciprocal space voxel before integration.
 %, while the intensity of the crystal truncation rod ($\bar{1}$10) Bragg peak was used for normalisation to correct possible miss-alignement effects on the integrated intensity.
-The starting time of each reciprocal space map is used as estimate for the time since the introduction of oxygen, the evolution of each peak is presented in fig. \ref{fig:HexBraggPeaks}.
-The growth of the ${\alpha-PtO_2}$ surface oxide peak at (-0.89, -0.89) seems to be exponential after \qty{23}{\hour} of exposition.
+The starting time of each reciprocal space in-plane map is used as estimate for the time since the introduction of oxygen, the evolution of each peak is presented in fig. \ref{fig:HexBraggPeaks}.
+The growth of the ${\alpha-PtO_2}$ surface oxide peak at [-0.89, -0.89] seems to be exponential after \qty{23}{\hour} of exposition.
 
 \begin{figure}[!htb]
     \centering
@@ -306,7 +305,7 @@ The background-subtracted intensity of the CTR was integrated using the \textit{
 
 The CTR intensity is presented in fig. \ref{fig:CTRPt111}, no additional peak could be detected at any condition, besides the Pt Bragg peaks at higher $L$ values.
 At first sight, the roughness seems to evolve during the exposition to different atmospheres, visible from the increase and decrease of the  intensity minimum near $L=1.5$ (or $L=2.5$ for the CTR recorded perpendicular to the ($\bar{1}$00) Bragg peak).
-The intensity of the CTR under \qty{500}{\milli\bar} of argon before the oxidation cycle was progressively lost during the measurements due to problems with the sample heater, also visible in the reciprocal space map under the same condition in fig. \ref{fig:MapsPt111A}, and is therefore not shown in the data besides for the ($\bar{1}\bar{1}$0) Bragg peak.
+The intensity of the CTR under \qty{500}{\milli\bar} of argon before the oxidation cycle was progressively lost during the measurements due to problems with the sample heater, also visible in the reciprocal space in-plane map under the same condition in fig. \ref{fig:MapsPt111A}, and is therefore not shown in the data besides for the ($\bar{1}\bar{1}$0) Bragg peak.
 
 \begin{figure}[!htb]
     \centering
