--- a/Sections/4_Results_SingleCrystals/Conclusion.tex
+++ b/Sections/4_Results_SingleCrystals/Conclusion.tex
@@ -15,6 +15,16 @@
 %     \label{fig:RGASXRD}
 % \end{figure}
 
-biased, can only measure stable structures
 
-different between both surfaces but same products in our RGA, not at b07, due to the contribution of the sample sides ?
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/product_comparison_single_crystals.pdf}
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/B07_2022_04_XPS/Figures/product_comparison_single_crystals.pdf}
+    \caption{
+        Evolution of reaction product partial pressures during the SXRD (top) and XPS (bottom) experiment on the Pt (111) and Pt (100) single crystals at \qty{450}{\degreeCelsius}.
+        Mean partial pressures during \qty{1}{\minute} at the end of each condition, recorded from a leak in the reactor output by a residual gas analyser (RGA) as detailed in sec. \ref{sec:XCAT}.
+        The partial pressures have been normalised by the partial pressure of nitrogen.
+    }
+    \label{fig:RGA450Pt111AndPt100}
+\end{figure}
+
