--- a/Sections/6_Appendix/DiffractionVocab.tex
+++ b/Sections/6_Appendix/DiffractionVocab.tex
@@ -5,21 +5,20 @@
     \toprule
     Symbol & Description \\
     \midrule
-    a, b, c & Lengths of real space unit cell edges.\\
     $\vec{a},\vec{b},\vec{c}$ & Real space unit cell vectors. \\
+    a, b, c & Magnitude of real space unit cell vectors.\\
     $\alpha, \beta, \gamma$ & Real space unit cell angles, respectively [$\angle (\vec{b}, \vec{c})$],  [$\angle (\vec{c}, \vec{a})$], [$\angle (\vec{a}, \vec{b})$]. \\
-    $a*, b*, c*$ & Lengths of reciprocal space unit cell edges. \\
     $\vec{a}^*,\vec{b}^*,\vec{c}^*$ & Reciprocal space unit cell vectors. \\
+    $a*, b*, c*$ & Magnitude of reciprocal space unit cell vectors. \\
     $\alpha^*, \beta^*, \gamma^*$ & Reciprocal space unit cell angles, respectively [$\angle (\vec{b}^*, \vec{c}^*)$],  [$\angle (\vec{c}^*, \vec{a}^*)$], [$\angle (\vec{a}^*, \vec{b}^*)$] \\
-    (x, y, z) & Coordinates of any point within the unit cell, expressed in terms of a, b and c units.\\
+    (x, y, z) & Points coordinates within the unit cell, expressed in terms of a, b and c units.\\
     & z is negative when situated below the surface. \\
-    {[}u v w{]} & Specific crystal axis, normal to a crystal plane. \\
-    \textless{}u v w\textgreater{} & Sets of equivalent crystal axes, due to lattice symmetry. \\
-    (hkl) & Miller indices of a specific set of crystal planes. \\
-    \{hkl\} & Equivalent planes. \\
-    hkl & Indices of the reflection from a set of parallel interplanar rows.\\
-    & Coordinates of a rod in the reciprocal lattice as measured on any plane normal to the rods. \\
-    $d_{hkl}$ & Interplanar spacing between (hkl) crystal planes.
+    {[}u v w{]} & Direction in real space. \\
+    \textless{}u v w\textgreater{} & Set of equivalent directions. \\
+    (hkl) & Miller indices detailing orientation of a family of parallel crystalline planes. \\
+    \{hkl\} & Equivalent families of crystallographic planes by lattice symmetry. \\
+    $d_{hkl}$ & Interplanar spacing between (hkl) crystal planes (\unit{\angstrom}). \\
+    (h, k, l) & Coordinates of a point in reciprocal space, also used for designing the direction of crystal truncation rods. \\
     \end{tabular}%
 }
 \caption{
