--- a/Sections/6_Appendix/Pt111.tex
+++ b/Sections/6_Appendix/Pt111.tex
@@ -64,3 +64,47 @@
     }
     \label{tab:InterplanarSpacingsPt111Oxygen}
 \end{table}
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/T450_1.pdf}
+    \caption{
+        Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the SXRD experiment on the Pt (111) single crystal at \qty{450}{\degreeCelsius}.
+        Vertical dotted lines indicate transitions between two conditions for which the \ce{NH_3} and \ce{O_2} flow is indicated in the legend.
+        The RGA electron multiplier is off for all the masses.
+    }
+    \label{fig:RGA450Pt111_1}
+\end{figure}
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/T450_2.pdf}
+    \caption{
+        Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the SXRD experiment on the Pt (111) single crystal at \qty{450}{\degreeCelsius}.
+        Vertical dotted lines indicate transitions between two conditions for which the \ce{NH_3} and \ce{O_2} flow is indicated in the legend.
+        The RGA electron multiplier is on for all the masses besides oxygen and argon.
+    }
+    \label{fig:RGA450Pt111_2}
+\end{figure}
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/T450_3.pdf}
+    \caption{
+        Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the SXRD experiment on the Pt (111) single crystal at \qty{450}{\degreeCelsius}.
+        Vertical dotted lines indicate transitions between two conditions for which the \ce{NH_3} and \ce{O_2} flow is indicated in the legend.
+        The RGA electron multiplier is on for all the masses besides argon.
+    }
+    \label{fig:RGA450Pt111_3}
+\end{figure}
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/T450_4.pdf}
+    \caption{
+        Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the SXRD experiment on the Pt (111) single crystal at \qty{450}{\degreeCelsius}.
+        Vertical dotted lines indicate transitions between two conditions for which the \ce{NH_3} and \ce{O_2} flow is indicated in the legend.
+        The RGA electron multiplier is on for all the masses besides argon.
+    }
+    \label{fig:RGA450Pt111_4}
+\end{figure}
