--- a/main.tex
+++ b/main.tex
@@ -276,12 +276,12 @@
 
     \chapter{Nanoparticles study}
     \input{Sections/6_Appendix/Nanoparticles}
-    \includepdf[pages=-]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/bcdi_data/3D_B7.pdf}\label{app:AppendixB7}
-    \includepdf[pages=-]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/bcdi_data/3D_D6_edited.pdf}\label{app:AppendixD6}
+    \input{Sections/6_Appendix/3D_Operando}
 
     \chapter{Single crystals study}
     \input{Sections/6_Appendix/Pt100}
     \input{Sections/6_Appendix/Pt111}
+    \input{Sections/6_Appendix/Comparison}
 
 % 4ème de couverture
 \input{Sections/99_4eme_couverture}
