--- a/Sections/6_Appendix/Nanoparticles.tex
+++ b/Sections/6_Appendix/Nanoparticles.tex
@@ -60,7 +60,7 @@
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_03_SXRD_NH3/figures/rga/rga_300.png}
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_03_SXRD_NH3/figures/rga/rga_300.pdf}
     \caption{
         Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the SXRD experiment on the non-patterned sample containing Pt[111]||Al$_2$O$_3$[0001] nanoparticles at \qty{300}{\degreeCelsius}.
         Vertical dotted lines indicate transitions between two conditions for which the \ce{NH_3} and \ce{O_2} flow is indicated in the legend.
@@ -70,7 +70,7 @@
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_03_SXRD_NH3/figures/rga/rga_500.png}
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_03_SXRD_NH3/figures/rga/rga_500.pdf}
     \caption{
         Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the SXRD experiment on the non-patterned sample containing Pt[111]||Al$_2$O$_3$[0001] nanoparticles at \qty{500}{\degreeCelsius}.
         Vertical dotted lines indicate transitions between two conditions for which the \ce{NH_3} and \ce{O_2} flow is indicated in the legend.
@@ -80,7 +80,7 @@
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_03_SXRD_NH3/figures/rga/rga_600.png}
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_03_SXRD_NH3/figures/rga/rga_600.pdf}
     \caption{
         Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the SXRD experiment on the non-patterned sample containing Pt[111]||Al$_2$O$_3$[0001] nanoparticles at \qty{600}{\degreeCelsius}.
         Vertical dotted lines indicate transitions between two conditions for which the \ce{NH_3} and \ce{O_2} flow is indicated in the legend.
